@startuml 01_Modelo_Conceptual

' =============================================================
'  MODELO CONCEPTUAL (Diagrama Entidad-Relación)
'  Proyecto: Sistema de gestión de reservas y estadías para una
'            cadena de hoteles turísticos.
'  Nivel conceptual: solo entidades, atributos identificadores/
'  clave y relaciones con su cardinalidad. Sin tipos de dato ni
'  detalles de implementación (eso va en el modelo lógico/físico).
' =============================================================

hide circle
skinparam linetype ortho
skinparam class {
    BackgroundColor White
    BorderColor Black
    ArrowColor Black
}

' ---------- Geografía y organización ----------
entity Ubigeo {
  * departamento
  * provincia
  * distrito
}

entity Hotel {
  * nombre
  * direccion
}

entity CargoEmpleado {
  * nombre
}

entity Empleado {
  * nombres
  * apellidos
}

' ---------- Autenticación y autorización ----------
entity Usuario {
  * username
  * password_hash
  * rol (RECEPCION / CAJA / GERENCIA / ADMINISTRADOR)
  * alcance (un hotel, o general si es ADMINISTRADOR)
}

' ---------- Personas (facturación) ----------
entity TipoDocumento {
  * nombre
  * abreviatura
}

entity Persona {
  * tipo (NATURAL / JURIDICA)
}

entity PersonaNatural {
  * numero_documento
  * nombres, apellidos
  * fecha_nacimiento
}

entity PersonaJuridica {
  * ruc
  * razon_social
}

entity Cliente {
  * observaciones
}

' ---------- Huésped (rol de ocupación, no identidad propia) ----------
' "Huésped" no es una entidad con identidad propia: es un ROL que
' cualquier PersonaNatural puede cumplir ("cliente = quien paga/
' factura; huésped = quien duerme"). Por eso no hay entidad Huesped:
' DetalleHuespedReserva y HuespedAlojamiento se relacionan directo con
' PersonaNatural. La incertidumbre de "quién" ocupará una habitación
' (reserva corporativa con cupos aún sin nombre) vive en
' DetalleHuespedReserva, cuyo huésped es opcional hasta identificarlo.

' ---------- Habitaciones y tarifas ----------
entity TipoHabitacion {
  * nombre
  * capacidad_base
}

entity Habitacion {
  * numero
  * piso
  * estado
}

entity PlanTarifa {
  * nombre
  * vigencia (inicio/fin)
  * es_publico
}

entity TarifaHabitacion {
  * precio_por_noche
}

' ---------- Reserva ----------
entity Reserva {
  * estado (PENDIENTE / CONFIRMADA / CANCELADA / NO_SHOW / FINALIZADA)
  * canal
  * fecha_checkin / checkout
  * monto_total
  * pagado
}

entity ReservaDetalle {
  * cantidad_habitaciones
  * subtotal
}

entity DetalleHuespedReserva {
  * es_titular
}

' ---------- Alojamiento (ocupación real) ----------
entity Alojamiento {
  * estado
  * fecha_checkin_real
  * fecha_checkout_real
}

entity HuespedAlojamiento {
  * es_titular
  * fecha_salida_real
}

' ---------- Servicios, daños y cobros ----------
entity CategoriaServicio {
  * nombre
}

entity Servicio {
  * nombre
  * precio_unitario
}

entity ConsumoServicio {
  * cantidad
  * subtotal
}

entity Danio {
  * descripcion
  * costo
  * estado
}

entity CuentaCobrar {
  * total
  * saldo
  * estado
}

entity CuentaCobrarDetalle {
  * concepto
  * subtotal
}

entity PagoCuentaCobrar {
  * monto
  * metodo_pago
}

' ---------- Auditoría ----------
' Bitácora de cambios (edición/eliminación) sobre Reserva y
' CuentaCobrar: quién, cuándo y qué cambió. No se relaciona
' directamente con Reserva/CuentaCobrar porque el registro afectado
' es polimórfico (según de cuál de las dos tablas se trate) y debe
' sobrevivir aunque esa fila ya no exista (ej. una reserva eliminada).
entity Auditoria {
  * tabla
  * operacion (edición / eliminación)
  * fecha_cambio
}

' =============================================================
'  RELACIONES
' =============================================================

Ubigeo ||--o{ Hotel               : ubicado en
Ubigeo ||--o{ Persona             : reside en

Hotel  ||--o{ Empleado            : emplea
CargoEmpleado ||--o{ Empleado     : clasifica
Empleado ||--o| Usuario           : tiene acceso
Hotel  |o--o{ Usuario             : alcance (vacío = general)

Hotel  ||--o{ Habitacion          : posee
TipoHabitacion ||--o{ Habitacion  : clasifica
TipoHabitacion ||--o{ TarifaHabitacion : tiene tarifa
PlanTarifa ||--o{ TarifaHabitacion     : define

' Supertipo / subtipo (generalización)
Persona <|-- PersonaNatural
Persona <|-- PersonaJuridica
TipoDocumento ||--o{ PersonaNatural : identifica

Persona ||--o{ Cliente            : es

Hotel  ||--o{ Reserva             : recibe
Cliente ||--o{ Reserva            : realiza / paga
Cliente ||--o{ Reserva            : contacto alterno
Empleado ||--o{ Reserva           : atiende

Reserva ||--o{ ReservaDetalle     : contiene
TipoHabitacion ||--o{ ReservaDetalle : especifica
PlanTarifa ||--o{ ReservaDetalle  : aplica a

ReservaDetalle ||--o{ DetalleHuespedReserva : preasigna
PersonaNatural |o--o{ DetalleHuespedReserva : es preasignado en (opcional — el cupo puede no tener huésped identificado todavía)

Reserva ||--o{ Alojamiento        : origina
ReservaDetalle ||--o{ Alojamiento : concreta
Habitacion ||--o{ Alojamiento     : es ocupada en
Empleado ||--o{ Alojamiento       : hace check-in / check-out

Alojamiento ||--o{ HuespedAlojamiento : hospeda
PersonaNatural ||--o{ HuespedAlojamiento : se aloja como (siempre persona natural — nunca una empresa)
DetalleHuespedReserva |o..o{ HuespedAlojamiento : trazabilidad (opcional)

Alojamiento ||--o{ ConsumoServicio : genera
Servicio ||--o{ ConsumoServicio    : es consumido en
CategoriaServicio ||--o{ Servicio  : clasifica

Alojamiento ||--o{ Danio          : puede tener

Alojamiento ||--o{ CuentaCobrar   : genera
CuentaCobrar ||--o{ CuentaCobrarDetalle : detalla
CuentaCobrar ||--o{ PagoCuentaCobrar    : recibe
Empleado ||--o{ PagoCuentaCobrar        : registra (caja)

Empleado |o--o{ Auditoria         : registra el cambio (opcional — puede ser un proceso automático)
Hotel ||--o{ Auditoria            : referente (capturado por el trigger al momento del cambio)

@enduml
